<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main_registration_page"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_ledger"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginTop="20sp"
            android:textSize="30sp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:background="#ffffff"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:hint="@string/username"
                android:id="@+id/username"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:hint="@string/email"
                android:id="@+id/email"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                android:gravity="center"
                android:inputType="textPassword"
                android:id="@+id/password"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:hint="@string/c_pass"
                android:gravity="center"
                android:inputType="textPassword"
                android:id="@+id/cpassword"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/register"
                android:background="@color/colorPrimary"
                android:text="@string/register" />

            <TextView
                android:id="@+id/goto_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_register"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_margin="20dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>