<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".update_customer_data">

    <LinearLayout
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/toolbar_layout"/>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/crfname"
                    android:textSize="25sp"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:id="@+id/udfname"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/crlname"
                    android:textSize="25sp"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:id="@+id/udlname"/>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/udgender"
                    android:entries="@array/crgender"/>


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/crphone"
                    android:inputType="phone"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    android:id="@+id/udphone"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/crwhatsapp"
                    android:inputType="phone"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    android:id="@+id/udwhatsapp"/>


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/craddress"
                    android:textSize="25sp"
                    android:inputType="textPostalAddress"
                    android:textColor="@color/black"
                    android:id="@+id/udaddress"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">



                    <LinearLayout
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:id="@+id/udprofile"
                            android:src="@drawable/ic_photo"/>

                        <Button
                            android:layout_marginTop="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/crphoto"
                            android:textColor="@color/black"
                            android:layout_gravity="center"
                            android:background="@color/colorPrimary"
                            android:id="@+id/udprofile_button"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="50dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="100dp">

                    <Button
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/update"
                        android:background="@color/colorPrimary"
                        android:id="@+id/udupdate" />


                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>