<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Customer_registration"
    android:orientation="vertical">

    <LinearLayout
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include layout="@layout/toolbar_layout"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/crfname"
                    android:textSize="25sp"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:id="@+id/fname"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/crlname"
                    android:textSize="25sp"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:id="@+id/lastname"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:id="@+id/gender"
                        android:entries="@array/crgender"/>

                </LinearLayout>



                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/crphone"
                    android:inputType="phone"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    android:id="@+id/phone"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/crwhatsapp"
                    android:inputType="phone"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    android:id="@+id/whatsapp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/craddress"
                    android:textSize="25sp"
                    android:inputType="textPostalAddress"
                    android:textColor="@color/black"
                    android:id="@+id/address"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">



                    <LinearLayout
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:id="@+id/profile"
                            android:src="@drawable/ic_photo"/>

                        <Button
                            android:layout_marginTop="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/crphoto"
                            android:textColor="@color/black"
                            android:layout_gravity="center"
                            android:background="@color/colorPrimary"
                            android:id="@+id/photo"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="30dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="100dp">

                    <Button
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/crsave"
                        android:background="@color/colorPrimary"
                        android:id="@+id/save" />

                    <Button
                        android:layout_width="200dp"
                        android:layout_marginLeft="5dp"
                        android:layout_height="wrap_content"
                        android:text="@string/crclear"
                        android:gravity="center"
                        android:background="@color/colorPrimary"
                        android:id="@+id/clear" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawe_menu"/>

</LinearLayout>